Add my-first-webpage.html modification

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>My first webpage</title>
+  <head>
+    <title>My first webpage!</title>
+  </head>
+  <body>
+    <p>
+  </body>
+
 </html>
