--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>MY First Webpage!</h1>
+    <h2>Written with a little help from Moringa School</h2>
     <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
   </body>
