--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>My first webpage!</title>
   </head>
   <body>
-    <h1>MY First Webpage!</h1>
+    <h1>My First Webpage!</h1>
     <h2>Written with a little help from Moringa School</h2>
     <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
