--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,8 +6,16 @@
   <body>
     <h1>My First Webpage!</h1>
     <h2>Written with a little help from Moringa School</h2>
+
     <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
+  <ul>
+    <p>Here are some things I'm going to learn about coding</p>
+    <li>html</li>
+    <li>CSS</li>
+    <li>JaveaScript</li>
+    <li>And a lot more</li>
+  </ul>
   </body>
 
 </html>
