--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -8,7 +8,7 @@
     <h2>Written with a little help from Moringa School</h2>
 
     <p>Hello, world!</p>
-    <p>Welcome to my first webpage!</p>
+    <p><strong>Welcome to my first webpage!</strong></p>
   <ul>
     <p>Here are some things I'm going to learn about coding</p>
     <li>html</li>
