--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -3,7 +3,7 @@
   <head>
     <title>My first webpage!</title>
   </head>
-  <img src="elephant.jpg" alt="A photo of an elephant">
+  <img src="images/elephant.jpg" alt="A photo of an elephant">
   <body>
     <h1>My First Webpage!</h1>
     <h2>Written with a little help from <em>Moringa School</em></h2>
