--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>My first webpage!</title>
   </head>
   <body>
-    <img src="images/elephant.jpg" alt="A photo of an elephant">
+    <img src="images/elephant.jpg" alt="A photo of an elephant"><height=200><width=200>
     <h1>My First Webpage!</h1>
     <h2>Written with a little help from <em>Moringa School</em></h2>
 
